--- a/SolutionExercicio08032021/ListaDeExercicios/ListaDeExercicios.csproj
+++ b/SolutionExercicio08032021/ListaDeExercicios/ListaDeExercicios.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ListaDeExercicios.Exercicio5</StartupObject>
+    <StartupObject>ListaDeExercicios.Exercicio6</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,6 +51,7 @@
     <Compile Include="Exercicio3.cs" />
     <Compile Include="Exercicio4.cs" />
     <Compile Include="Exercicio5.cs" />
+    <Compile Include="Exercicio6.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
