--- a/SolutionExercicio15032021/Model2/Model.csproj
+++ b/SolutionExercicio15032021/Model2/Model.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Exercicio1\Pessoa.cs" />
     <Compile Include="Exercicio2\Urna.cs" />
+    <Compile Include="Exercicio3\Fabrica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
