--- a/SolutionExercicio15032021/Model/Model.csproj
+++ b/SolutionExercicio15032021/Model/Model.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F92E18A-B9D5-4607-BA7A-952FA01F0288}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{FFF79E6F-7470-450A-B738-6E86B41C1808}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Model</RootNamespace>
     <AssemblyName>Model</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,11 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pessoa.cs" />
+    <Compile Include="Exercicio10\Estatisticas.cs" />
+    <Compile Include="Exercicio1\Pessoa.cs" />
+    <Compile Include="Exercicio2\Urna.cs" />
+    <Compile Include="Exercicio3\Fabrica.cs" />
+    <Compile Include="Exercicio4\Funcionario.cs" />
+    <Compile Include="Exercicio5\Pessoa.cs" />
+    <Compile Include="Exercicio6\Vendedor.cs" />
+    <Compile Include="Exercicio7\Dado.cs" />
+    <Compile Include="Exercicio8\Triangulo.cs" />
+    <Compile Include="Exercicio9\Leitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
