--- a/Espotifai/Espotifai/bin/Espotifai.dll.config
+++ b/Espotifai/Espotifai/bin/Espotifai.dll.config
@@ -19,5 +19,9 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
+  <connectionStrings>
+    <add name="ConnectionSQLServer" connectionString="Data Source=PC-LEONARDO;Initial Catalog=dbespotifai;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
 </configuration>
