--- a/Espotifai/Model/Model.csproj
+++ b/Espotifai/Model/Model.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Album .cs" />
     <Compile Include="Artista.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
