--- a/Espotifai/Dal/Dal.csproj
+++ b/Espotifai/Dal/Dal.csproj
@@ -47,6 +47,8 @@
     <Compile Include="DB.cs" />
     <Compile Include="Artista\ArtistaDB.cs" />
     <Compile Include="Artista\IArtistaDB.cs" />
+    <Compile Include="Musica\MusicaDB.cs" />
+    <Compile Include="Musica\IMusicaDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
