--- a/SolutionExercicio08032021/ListaDeExercicios/ListaDeExercicios.csproj
+++ b/SolutionExercicio08032021/ListaDeExercicios/ListaDeExercicios.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ListaDeExercicios.Exercicio14</StartupObject>
+    <StartupObject>ListaDeExercicios.Teste</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Teste.cs" />
     <Compile Include="Exercicio10.cs" />
     <Compile Include="Exercicio11.cs" />
     <Compile Include="Exercicio12.cs" />
