--- a/ControleViagens/ControleViagens/bin/ControleViagens.dll.config
+++ b/ControleViagens/ControleViagens/bin/ControleViagens.dll.config
@@ -19,7 +19,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ViagemDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-LEONARDO;initial catalog=ViagemDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ViagemDBEntities" connectionString="metadata=res://*/Banco.csdl|res://*/Banco.ssdl|res://*/Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-LEONARDO;initial catalog=ViagemDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
